<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KendiniTanit"
    android:background="@drawable/back_mat">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/b_l_m"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/s_n_f"
        app:layout_constraintEnd_toEndOf="@+id/chip2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/chip2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kullan_c_ad"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.484"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/customer_26px"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fak_lte"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="173dp"
        android:layout_height="63dp"
        android:textStyle="bold"
        android:text="@string/onayla"
        android:onClick="AcceptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="61dp"
        android:layout_marginTop="72dp"
        android:text="@string/gazi_niversitesi"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />



</androidx.constraintlayout.widget.ConstraintLayout>